# modules/v1/auth/routes/urls.py
@@ -11,3 +11,4 @@ auth_bp = Blueprint('auth', __name__)
 auth_bp.add_url_rule('/register', view_func=authview.register, methods=['POST'])
 auth_bp.add_url_rule('/login', view_func=authview.login, methods=['POST'])
 auth_bp.add_url_rule('/logout', view_func=authview.logout)
+auth_bp.add_url_rule('/reset_password', view_func=authview.reset_password, methods=['POST'])
