# modules/v1/profile/routes/urls.py
@@ -1,5 +1,6 @@
 # import views.views as views # Assuming your view functions are defined in views.py
 import modules.v1.profile.controller.user_controller as userview
+from libraries import email
 from flask import Blueprint
 
 # Create a Blueprint object
@@ -8,4 +9,4 @@ user_bp = Blueprint('urls', __name__)
 user_bp.add_url_rule('/profile', view_func=userview.delete_user, methods=['DELETE'])
 user_bp.add_url_rule('/profile', view_func=userview.update_profile, methods=['PUT'])
 user_bp.add_url_rule('/profile', view_func=userview.userinfo)
-user_bp.add_url_rule('/images/<filename>', view_func=userview.serve_image)
+user_bp.add_url_rule('/mail', view_func=email.send_email)
